<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C3994"
    tools:context=".Notifications">

    <Button
        android:id="@+id/notificationsButton"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:text="@string/notifications"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/listButton"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/actionsButton"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:text="@string/actions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/notificationsButton"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/listButton"
        android:layout_width="70dp"
        android:layout_height="38dp"
        android:text="@string/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="110dp"
        android:layout_height="38dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/actionsButton"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/firstClassButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/class_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listButton"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/firstClassButton4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/class_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileButton"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/firstClassButton2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/class_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionsButton"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/firstClassButton3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:text="@string/class_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationsButton"
        android:backgroundTint="#03A9F4"
        app:layout_constraintVertical_bias="0.019" />

</androidx.constraintlayout.widget.ConstraintLayout>